@@ -1,5 +1,14 @@
 2016-01-02 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCCglobl.h,
+	  src/SDCCmain.c,
+	  src/SDCCsymt.c,
+	  src/SDCCval.c,
+	  doc/sdccman.lyx:
+	  Make char unsigned by default.
+
+2016-01-02 Philipp Klaus Krause <pkk AT spth.de>
+
 	* device/include/stdlib.h:
 	  Fix declaration of aligned_alloc() for C11.
 
